Added logout functionality and began sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,9 @@ address {
 .navbar-dark {
     background-color: #5F11C2;
 }
+
+.navbar-mark {
+    background-color: #5F11C2;
+    height: 980px;
+    width: 75px;
+}
